--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,18 @@
+{% load staticfiles %}
+<html>
 <head>
-	<link rel="stylesheet" type="text/css" href="NormalPageStyle.css"/>
+	<link rel="stylesheet" type="text/css" href="{% static "CSS/NormalPageStyle.css" %}"/>
+	<title>EatGlasgow</title> 
 </head>
 <body>
 <div class="mainpage">
 	<left>
-		<p>This is the left part of the page</p>
-		<p>Which 200px</p>
+		<p>Signup</p>
+		<p>login</p>
 	</left>
   
 	<right>
+		<div class="image"><img src="{% static "image/logo.jpg" %}" alt="Logo"/></div>
 		<p>This is the right part of the page</p>
 		<p>Which 200px</p>
 	</right>
@@ -18,24 +22,36 @@
 		This should be the search bar
 		</p>
 	</div>
-  
-	<section>
-		<p>
-		This is the centre of the page 
-		</p>
-	</section>
-
-	<section>
-		<p>
-		Try to change the size of the browser.
-		</p>
-	</section>
-
-	<section>
-		<p>
-		CSS is a language that describes the style of an HTML document. CSS describes how HTML elements should be displayed. This tutorial will teach you CSS from basic to advanced.
-		</p>
-	</section>
+ 
+		<section>
+			<p>
+			<div class="Rimage"><img src="{% static "image/logo.jpg" %}" alt="Logo"/></div>
+			{{ Name }}</br>
+			{{ Cuisine }}</br>
+			{{ StressAdress }}</br>
+			{{ PriceRange }}</br>
+			{{ OpeningHours }}</br>
+			{{ Status }}</br>
+			
+			</p>
+		</section>
+{% if Restaurant %}
+	{% for Restaurant in RestaurantList %}
+		<section>
+			<p>
+			<div class="Rimage"><img src="{% static "image/logo.jpg" %}" alt="Logo"/></div>
+			{{ Name }}</br>
+			{{ Cuisine }}</br>
+			{{ StressAdress }}</br>
+			{{ PriceRange }}</br>
+			{{ OpeningHours }}</br>
+			{{ Status }}</br>
+			{{ logo }}
+			</p>
+		</section>
+	 {% endfor %}
+{% endif%}
 
 </div>
 </body>
+</html>
