--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
 	<HR size="2" width="90%">
 	<div class="center">
 	<p>
-		<a href="{% url 'index' %}">Index</a>  <a href="">About</a></li>
-	 </p>
-	 The Website Powered by Yuk Fai Wong,  Nhut Minh Vo
+		<a href="{% url 'index' %}">Index</a>  <a href="{% url 'about' %}">About</a>
+	</p>
+	 The Website Powered by </br>Yuk Fai Wong,  Nhut Minh Vo
 	 <div>
 </body> 
 </html>
