--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,9 +3,10 @@
 
 {% block title_block %}
 	EatGlasgow-Registration
-	</title>
-	<link rel="stylesheet" type="text/css" href="{% static "CSS/Registration.css" %}"/>
 {% endblock %} 
+{% block head_block %}
+	<link rel="stylesheet" type="text/css" href="{% static "CSS/Registration.css" %}"/>
+{% endblock %}
 
 {% block body_block %}
 	<H1 class="center">Create your EatGlasgow Account</H1>
@@ -15,4 +16,3 @@
 		<input type="submit" value="Login" />
 	</form>
 {% endblock %}
-
