--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 		{% block head_block %}
 		{% endblock %}
 	</head>
-<body>
+<body style="background-color: #f2f2f2;">
 	<div>
 		{% block body_block %}
 		{% endblock %}
