fix login style

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 		{% endblock %}
 	</div>
 	
-	<div style="position: fixed;bottom: 0;text-align: center;margin: 0 auto;width: 100%;">
+	<div style="position: absolute; bottom: 10px; left: 0px; text-align: center;margin: 0 auto;width: 100%;">
 	<!--In text CSS to make sure the base do not effect other pages -->
 		<HR size="2" width="90%" >
 		<a href="{% url 'index' %}">Index</a>  <a href="{% url 'about' %}">About</a><br>
