--- a/static/CSS/Login.css
+++ b/static/CSS/Login.css
@@ -15,3 +15,10 @@ img {
 	display: block;
 	margin: 0 auto;
 }
+.login {
+	margin: 0 auto; 
+	height: 668px;
+	width: 768px;
+	background-color: #FFFFFF;
+	border: 1px solid #999;
+}
