--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,8 @@
 {% endblock %} 
 
 {% block body_block %}
+	<div class="login">
+	</br></br></br>
 	<img src="{% static "image/logo.jpg" %}" alt="Logo"/>
 	</br></br></br>
 	<form id="login_form" method="post" action="{% url 'login' %}">
@@ -24,4 +26,5 @@
 		<table>
 		<input type="submit" value="Login" />
 	</form>
+	</div>
 {% endblock %}
