--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,12 @@
 <div class="mainpage">
 	<left>
 		<p class="center">
+		{% if user.is_authenticated %}
+		<a href="{% url 'logout' %}">Logout</a></br>
+		{% else %}
 		<a href="{% url 'login' %}">Login</a></br>
 		<a href="{% url 'registration' %}">Registration</a>
+		{% endif %}
 		</p>
 	</left>
   
