--- a/templates/registration.html
+++ b/templates/registration.html
@@ -22,7 +22,7 @@
 			{% csrf_token %}
 			Please enter your details.</br>
 			<table>
-			{{user_form}}
+			{{user_form.as_table}}
 			</table>
 			<input type="submit" name = "submit" value="Register" />
 		</form>
