--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,12 @@
 		{% endblock %}
 	</head>
 <body style="background-color: #f2f2f2;">
-	<div>
+	<div style="margin-bottom: 250px">
 		{% block body_block %}
 		{% endblock %}
 	</div>
 	
-	<div style="position: relative ; bottom: 5px; left: 0px; text-align: center;margin: 0 auto;width: 100%;">
+	<div style="position: absolute ; bottom: 0px; left: 0px; text-align: center;margin: 0 auto;width: 100%">
 	<!--In text CSS to make sure the base do not effect other pages -->
 		<HR size="2" width="90%" >
 		<a href="{% url 'index' %}">Index</a>  <a href="{% url 'about' %}">About</a><br>
