--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,10 @@
 
 {% block title_block %}
 	EatGlasgow
-	</title>
-	<link rel="stylesheet" type="text/css" href="{% static "CSS/NormalPageStyle.css" %}"/>
 {% endblock %} 
+{% block head_block %}
+	<link rel="stylesheet" type="text/css" href="{% static "CSS/NormalPageStyle.css" %}"/>
+{% endblock %}
 
 {% block body_block %}
 <div class="mainpage">
