UserProfile-index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
 {% endblock %}
 
 {% block body_block %}
-<<<<<<< HEAD
     <div class="mainpage">
         <left>
             <p class="center">
@@ -25,7 +24,7 @@
             <!--end UserProfile-->
             </p>
         </left>
-=======
+    </div>
 <div class="mainpage">
 	<left>
 		<p class="center">
@@ -51,8 +50,6 @@
         </form>
     </div>
 	<div class="middle"><br></div>
->>>>>>> 4b1b44aa725b1e8ac81ee00aa7a20621255fb770
-
         <right>
             <div class="image"><img src="{% static "image/logo.jpg" %}" alt="Logo"/></div>
             <p>This is the right part of the page</p>
