--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             <p>Which 200px</p>
         </right>
 
-        <div id="search">
+        <div id="search" class="searchBar">
             <form method="get" action="{% url 'results' %}" enctype="multipart/form-data">
                 <input id="other" type="text" name="search" placeholder="Type here...">
                 <input id="submitsearch" type="submit" name="Submit" style="margin-left: 1.5%;">
