--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,9 @@
                     <a href="{% url 'login' %}">Login</a></br>
                     <a href="{% url 'registration' %}">Registration</a>
                 {% endif %}
+                {%  if user.userprofile.status == 2 %}
+                    <a href = 'owner.html'> Your Restaurant </a>
+                {%  endif %}
             <!--end UserProfile-->
             </p>
         </left>
