--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <!--In text CSS to make sure the base do not effect other pages -->
     <HR size="2" width="90%">
     <a href="{% url 'index' %}">Index</a> <a href="{% url 'about' %}">About</a><br>
-    The Website Was Made By </br>Yuk Fai Wong, Nhut Minh Vo, Alex Marshall
+    The Website Was Made By </br>Yuk Fai Wong, Nhut Minh Vo, Alex Marshall, Ho Yan Lew
 </div>
 </body>
 </html>
