--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 
 {% block body_block %}
 	<p class="center">Hi there! Thank for using the website, please enjoy!</br>
-	The Website Powered by Yuk Fai Wong, Nhut Minh Vo
+	The Website Powered by Yuk Fai Wong, Nhut Minh Vo, Alex Marshall, Ho Yan Lew
 	</p>
 	
 {% endblock %}
